[gd_scene load_steps=19 format=1]

[ext_resource path="res://map.gd" type="Script" id=1]
[ext_resource path="res://hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://camera.gd" type="Script" id=3]
[ext_resource path="res://exit_door.tscn" type="PackedScene" id=4]
[ext_resource path="res://ground_dirt_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://key.tscn" type="PackedScene" id=6]
[ext_resource path="res://gem.tscn" type="PackedScene" id=7]
[ext_resource path="res://character.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenery_tiles.tres" type="TileSet" id=9]
[ext_resource path="res://jump_pad.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -960.113, -1479.63, 2866.48, -1480.81, 2933.35, 4213.06, -975.292, 3857.14 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 382.426, 2715.69, 478.64, 2541.1, 519.865, 2592.97 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 727.765, 2715.69, 382.426, 2715.69, 519.865, 2592.97, 577.234, 2592.97 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 727.765, 2715.69, 577.234, 2592.97, 631.551, 2534.34 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 133.782, 16.177 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 227.03, 13.9033 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 69.2383, 15.8838 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 230.012, 41.8894 )

[node name="map" type="Area2D"]

transform/pos = Vector2( 3, 0 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }
map_name = "LandFill"
time_limit = 60
default_actor = "pig"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( -960.113, -1479.63, 2866.48, -1480.81, 2933.35, 4213.06, -975.292, 3857.14 )
shape_range = Vector2( 0, 0 )
trigger = false
__meta__ = { "_edit_lock_":true }

[node name="hud" parent="." instance=ExtResource( 2 )]

[node name="camera" type="Camera2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 461.232, -570.577 )
anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 3 )

[node name="exit door" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 855.538, 3242.01 )

[node name="ground" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="keys" type="Node" parent="."]

editor/display_folded = true

[node name="key1" parent="keys" instance=ExtResource( 6 )]

transform/pos = Vector2( 115, 456 )

[node name="key2" parent="keys" instance=ExtResource( 6 )]

transform/pos = Vector2( -351.635, 1254 )

[node name="key3" parent="keys" instance=ExtResource( 6 )]

transform/pos = Vector2( 45.7952, 3288.48 )

[node name="blue gems" type="Node" parent="."]

editor/display_folded = true

[node name="blue gem1" parent="blue gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 930.772, 2900.58 )

[node name="blue gem2" parent="blue gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 961.703, 2553.16 )

[node name="blue gem3" parent="blue gems" instance=ExtResource( 7 )]

transform/pos = Vector2( -408.498, 2289.66 )

[node name="blue gem4" parent="blue gems" instance=ExtResource( 7 )]

transform/pos = Vector2( -312.971, 70.5713 )

[node name="blue gem5" parent="blue gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 1192.05, 1669.62 )

[node name="green gems" type="Node" parent="."]

editor/display_folded = true

[node name="green gem1" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 356.693, 2325.14 )
frame = 1

[node name="green gem2" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( -426.715, 2985.14 )
frame = 1

[node name="green gem3" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 969.232, 1293.92 )
frame = 1

[node name="green gem4" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( -64.8549, 1080.48 )
frame = 1

[node name="green gem5" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 1064.03, 266.117 )
frame = 1

[node name="green gem6" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( -90.5905, 529.901 )
frame = 1

[node name="green gem7" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 1493.97, 2969.96 )
frame = 1

[node name="green gem8" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 2214.96, 2419.01 )
frame = 1

[node name="green gem9" parent="green gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 385.261, 1672.17 )
frame = 1

[node name="red gems" type="Node" parent="."]

editor/display_folded = true

[node name="red gem1" parent="red gems" instance=ExtResource( 7 )]

transform/pos = Vector2( -503.447, 1487.34 )
frame = 2

[node name="red gem2" parent="red gems" instance=ExtResource( 7 )]

transform/pos = Vector2( 1540.19, 1758.65 )
frame = 2

[node name="character" parent="." instance=ExtResource( 8 )]

visibility/visible = false
transform/pos = Vector2( -2.27209, 0 )

[node name="front scenery" type="TileMap" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
mode = 0
tile_set = ExtResource( 9 )
cell/size = Vector2( 128, 128 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 2555911, 14, 2555912, 14, 2555913, 14, 2555914, 14, 2555930, 536870934, 2555931, 536870934, 2555932, 536870934, 2555933, 536870934, 2555934, 536870934, 2555935, 536870934, 2555936, 536870934, 2621446, 14, 2621447, 14, 2621448, 14, 2621449, 14, 2621450, 14, 2621451, 14, 2686982, 14, 2686983, 14, 2686984, 14, 2686985, 14, 2686986, 14, 2686987, 14, 2752518, 14, 2752519, 14, 2752520, 14, 2752521, 14, 2752522, 14, 2752523, 14, 2949118, 13, 2949119, 13, 2883584, 13, 3014654, 536870923, 3014655, 536870923, 2949120, 536870923, 3604477, 22, 3604478, 22, 3670044, 16, 3670045, 16, 3670046, 16, 3670047, 16, 3670048, 16, 3670049, 16, 3670050, 16, 3735580, 14, 3735581, 14, 3735582, 14, 3735583, 14, 3735584, 14, 3735585, 14, 3735586, 14, 3801116, 14, 3801117, 14, 3801118, 14, 3801119, 14, 3801120, 14, 3801121, 14, 3801122, 14 )
__meta__ = { "_edit_lock_":true }

[node name="TileMapVolcan" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 2555910, 536870921, 2555915, 9, 2621445, 536870921, 2621451, 2, 2621452, 9, 2686980, 536870921, 2686981, 536870914, 2686987, 536870915, 2686988, 2, 2686989, 9, 2752515, 536870921, 2752516, 536870914, 2752517, 536870915, 2752524, 536870915, 2752525, 2, 2752526, 9, 2818051, 536870915, 2818052, 536870915, 2818053, 536870915, 2818054, 536870915, 2818055, 536870915, 2818056, 536870915, 2818057, 536870915, 2818058, 536870915, 2818059, 536870915, 2818060, 536870915, 2818061, 536870915, 2818062, 536870915 )

[node name="volcan" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.15426, 0, 0, 1.36741, -620.433, -900.25 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 2.15426, 0, 0, 1.36741, -620.433, -900.25 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 4 )
shapes/2/transform = Matrix32( 2.15426, 0, 0, 1.36741, -620.433, -900.25 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="volcan"]

transform/pos = Vector2( -620.433, -900.25 )
transform/scale = Vector2( 2.15426, 1.36741 )
build_mode = 0
polygon = Vector2Array( 382.426, 2715.69, 727.765, 2715.69, 631.551, 2534.34, 577.234, 2592.97, 519.865, 2592.97, 478.64, 2541.1 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="water" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 0.746074, 0, 0, 1, -28.2675, 2931 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="water"]

transform/pos = Vector2( -28.2675, 2931 )
transform/scale = Vector2( 0.746074, 1 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="spikes" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1887.99, 2563.45 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 7 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -64.5048, 3522.21 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D 1" type="CollisionShape2D" parent="spikes"]

visibility/visible = false
transform/pos = Vector2( 1887.99, 2563.45 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="spikes"]

visibility/visible = false
transform/pos = Vector2( -64.5048, 3522.21 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 1

[node name="lava" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.999998, 2015.49, 3736.77 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="lava"]

visibility/visible = false
transform/pos = Vector2( 2015.49, 3736.77 )
transform/scale = Vector2( 1, 0.999998 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="jump pad1" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 1307.44, 3041.38 )
force = 650

[node name="jump pad2" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 1127.8, 3296.52 )
force = 350

[node name="jump pad3" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 1633.01, 2464.77 )
force = 550

[node name="jump pad4" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 2470.81, 2464.99 )
force = 750

[connection signal="body_enter" from="volcan" to="." method="_on_body_enter_lava"]

[connection signal="body_enter" from="water" to="." method="_on_body_enter_water"]

[connection signal="body_enter" from="spikes" to="." method="_on_body_enter_fatality"]

[connection signal="body_enter" from="lava" to="." method="_on_body_enter_lava"]


